--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
     <a href="introdução.html">Home</a>
     <a href="formulario.html">Cadastrar</a>
     <a href="tabela.html">Listar</a>
-    <a href= "kkk" >Sair</a>
+    <a href= "" >Sair</a>
   </div>
 
 
