--- a/formulario.html
+++ b/formulario.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
   <title>Cadastro de alunos(as)</title>
+  <style>
+  div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+  }
+
+  div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
+
+  div.scrollmenu a:hover {
+    background-color: #777;
+  }
+</style>
 </head>
 <body>
+  <div class="scrollmenu">
+    <a href="introdução.html">Home</a>
+    <a href="formulario.html">Cadastrar</a>
+    <a href="tabela.html">Listar</a>
+    <a href= "" >Sair</a>
+  </div>
+
   <h1>Dados do cadastro</h1>
 
   <form method="post" action="validar.html">
