--- a/introdução.html
+++ b/introdução.html
@@ -1,41 +1,64 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>Introdução ao HTML</title>
+<head>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>Introdução ao HTML</title>
+  <style>
+  div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+  }
 
-    <link href="geral.css" rel="stylesheet">
+  div.scrollmenu a {
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+  }
 
-  </head>
+  div.scrollmenu a:hover {
+    background-color: #777;
+  }
+  </style>
+  <link href="geral.css" rel="stylesheet">
 
-  <body>
+</head>
 
-    <!-- Comentário //-->
+<body>
+  <div class="scrollmenu">
+    <a href="introdução.html">Home</a>
+    <a href="formulario.html">Cadastrar</a>
+    <a href="tabela.html">Listar</a>
+    <a href= "" >Sair</a>
+  </div>
+  <!-- Comentário //-->
 
-    <h1>Olá, mundo!</h1>
-    <h2>Seja bem-vindo(a)! &#60; </h2>
+  <h1>Olá, mundo!</h1>
+  <h2>Seja bem-vindo(a)! &#60; </h2>
 
-    <p>Texto - parágrafo</p>
-    <p>Texto - parágrafo</p>
-    <p>Texto - parágrafo</p>
-    <p>Texto - parágrafo</p>
+  <p>Texto - parágrafo</p>
+  <p>Texto - parágrafo</p>
+  <p>Texto - parágrafo</p>
+  <p>Texto - parágrafo</p>
 
-    <a href="http://www.ufop.br" target="_blank">Site da UFOP</a>
+  <a href="http://www.ufop.br" target="_blank">Site da UFOP</a>
 
-    <br>
-    <a href="formulario.html">Cadastro</a>
-    <br>
-    <a href="tabela.html">Lista</a>
+  <br>
+  <a href="formulario.html">Cadastro</a>
+  <br>
+  <a href="tabela.html">Lista</a>
 
-    <br>
-    <img width="30%" src="./img/logo.png" alt="Logotipo do DECSI">
-
-
+  <br>
+  <img width="30%" src="./img/logo.png" alt="Logotipo do DECSI">
 
 
 
-  </body>
+
+
+</body>
 
 
 </html>
