--- a/CSI477-2018-02-atividade-pratica-001/02-imc.html
+++ b/CSI477-2018-02-atividade-pratica-001/02-imc.html
@@ -27,7 +27,7 @@
         <input type="number"  nome="altura"  id="altura" placeholder="Altura(m)" class="form-control">
       </div>
       <div class="col">
-        <input type="button" class="btn btn-primary" name="verificar"  id="verificar" value="Verificar">
+        <input type="button" align="right" class="btn btn-primary" name="verificar"  id="verificar" value="Verificar">
       </div>
     </div>
 
